# Stronghold2-MP-AI-Patch

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
